--- a/gui_testing_modified/air suspension.ui
+++ b/gui_testing_modified/air suspension.ui
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>-160</x>
-      <y>-40</y>
+      <x>-120</x>
+      <y>-30</y>
       <width>1541</width>
       <height>831</height>
      </rect>
@@ -59,7 +59,7 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>400</x>
       <y>190</y>
       <width>541</width>
       <height>151</height>
@@ -120,9 +120,9 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>150</x>
       <y>190</y>
-      <width>151</width>
+      <width>211</width>
       <height>151</height>
      </rect>
     </property>
@@ -134,7 +134,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pirelli_pzeo.jpg</pixmap>
+     <pixmap>airlift.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -146,7 +146,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>400</x>
       <y>370</y>
       <width>531</width>
       <height>151</height>
@@ -167,7 +167,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>400</x>
       <y>550</y>
       <width>541</width>
       <height>151</height>
@@ -271,9 +271,9 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>150</x>
       <y>370</y>
-      <width>151</width>
+      <width>211</width>
       <height>151</height>
      </rect>
     </property>
@@ -285,7 +285,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>michelin_pilot.jpg</pixmap>
+     <pixmap>susp2.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -297,9 +297,9 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>150</x>
       <y>550</y>
-      <width>151</width>
+      <width>211</width>
       <height>151</height>
      </rect>
     </property>
@@ -311,7 +311,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>dunlop_sport.jpg</pixmap>
+     <pixmap>susp3.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
