--- a/gui_testing_modified/factory exhausts.ui
+++ b/gui_testing_modified/factory exhausts.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1207</width>
-    <height>793</height>
+    <width>1276</width>
+    <height>807</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>-160</x>
+      <x>-150</x>
       <y>-40</y>
       <width>1541</width>
       <height>831</height>
@@ -128,13 +128,14 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(225, 225, 225);
+background-color: rgb(255, 255, 255);
 font: 15pt &quot;ROG Fonts&quot;;</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pirelli_pzeo.jpg</pixmap>
+     <pixmap>ex1.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -279,13 +280,14 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(225, 225, 225);
+background-color: rgb(255, 255, 255);
 font: 15pt &quot;ROG Fonts&quot;;</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>michelin_pilot.jpg</pixmap>
+     <pixmap>ex2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -311,7 +313,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>dunlop_sport.jpg</pixmap>
+     <pixmap>ex3.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -326,7 +328,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1207</width>
+     <width>1276</width>
      <height>26</height>
     </rect>
    </property>
