--- a/gui_testing_modified/offroad suspension.ui
+++ b/gui_testing_modified/offroad suspension.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1207</width>
+    <width>1234</width>
     <height>793</height>
    </rect>
   </property>
@@ -36,8 +36,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>30</y>
+      <x>50</x>
+      <y>40</y>
       <width>1191</width>
       <height>121</height>
      </rect>
@@ -59,7 +59,7 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>400</x>
       <y>190</y>
       <width>541</width>
       <height>151</height>
@@ -120,9 +120,9 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>140</x>
       <y>190</y>
-      <width>151</width>
+      <width>201</width>
       <height>151</height>
      </rect>
     </property>
@@ -134,7 +134,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pirelli_pzeo.jpg</pixmap>
+     <pixmap>ohlins.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -146,7 +146,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>400</x>
       <y>370</y>
       <width>531</width>
       <height>151</height>
@@ -167,8 +167,8 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>550</y>
+      <x>400</x>
+      <y>560</y>
       <width>541</width>
       <height>151</height>
      </rect>
@@ -271,9 +271,9 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>140</x>
       <y>370</y>
-      <width>151</width>
+      <width>201</width>
       <height>151</height>
      </rect>
     </property>
@@ -285,7 +285,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>michelin_pilot.jpg</pixmap>
+     <pixmap>liftkit.webp</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -297,9 +297,9 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>550</y>
-      <width>151</width>
+      <x>140</x>
+      <y>560</y>
+      <width>201</width>
       <height>151</height>
      </rect>
     </property>
@@ -311,7 +311,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>dunlop_sport.jpg</pixmap>
+     <pixmap>add susp.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -326,7 +326,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1207</width>
+     <width>1234</width>
      <height>26</height>
     </rect>
    </property>
