--- a/gui_testing_modified/track suspension.ui
+++ b/gui_testing_modified/track suspension.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1207</width>
-    <height>793</height>
+    <width>1189</width>
+    <height>811</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -37,7 +37,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>0</y>
       <width>1191</width>
       <height>121</height>
      </rect>
@@ -60,7 +60,7 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>190</y>
+      <y>150</y>
       <width>541</width>
       <height>151</height>
      </rect>
@@ -91,8 +91,8 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QPushButton" name="SignIN">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>200</y>
+      <x>810</x>
+      <y>160</y>
       <width>231</width>
       <height>131</height>
      </rect>
@@ -120,10 +120,10 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>190</y>
-      <width>151</width>
-      <height>151</height>
+      <x>120</x>
+      <y>140</y>
+      <width>181</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -134,7 +134,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>pirelli_pzeo.jpg</pixmap>
+     <pixmap>ohlins track.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -146,8 +146,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>370</y>
+      <x>340</x>
+      <y>350</y>
       <width>531</width>
       <height>151</height>
      </rect>
@@ -167,8 +167,8 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>550</y>
+      <x>340</x>
+      <y>560</y>
       <width>541</width>
       <height>151</height>
      </rect>
@@ -187,8 +187,8 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QPushButton" name="SignIN_2">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>390</y>
+      <x>810</x>
+      <y>360</y>
       <width>231</width>
       <height>131</height>
      </rect>
@@ -216,8 +216,8 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QPushButton" name="SignIN_3">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>560</y>
+      <x>810</x>
+      <y>570</y>
       <width>231</width>
       <height>131</height>
      </rect>
@@ -245,9 +245,9 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>350</y>
-      <width>1061</width>
+      <x>90</x>
+      <y>320</y>
+      <width>1011</width>
       <height>16</height>
      </rect>
     </property>
@@ -258,9 +258,9 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>100</x>
       <y>530</y>
-      <width>1061</width>
+      <width>1011</width>
       <height>16</height>
      </rect>
     </property>
@@ -271,10 +271,10 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>370</y>
-      <width>151</width>
-      <height>151</height>
+      <x>120</x>
+      <y>340</y>
+      <width>181</width>
+      <height>171</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -285,7 +285,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>michelin_pilot.jpg</pixmap>
+     <pixmap>tracksusp2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -297,10 +297,10 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>550</y>
-      <width>151</width>
-      <height>151</height>
+      <x>120</x>
+      <y>560</y>
+      <width>181</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -311,7 +311,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>dunlop_sport.jpg</pixmap>
+     <pixmap>track3.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -326,7 +326,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1207</width>
+     <width>1189</width>
      <height>26</height>
     </rect>
    </property>
