--- a/gui_testing_modified/track tyres.ui
+++ b/gui_testing_modified/track tyres.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1207</width>
-    <height>793</height>
+    <width>1209</width>
+    <height>821</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,7 +27,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>../OneDrive/Documents/GitHub/Compooter-Projekt/gui_testing_modified/torqucart.jpg</pixmap>
+     <pixmap>torqucart.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -36,8 +36,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>40</y>
+      <x>280</x>
+      <y>20</y>
       <width>931</width>
       <height>121</height>
      </rect>
@@ -57,8 +57,8 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>190</y>
-      <width>541</width>
+      <y>170</y>
+      <width>341</width>
       <height>151</height>
      </rect>
     </property>
@@ -76,7 +76,7 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
 font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;PIRELLI PZero Trofeo R (Set of 4)&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Make - Pirelli&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Model - PZero Trofeo R&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Cost - INR &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;PIRELLI PZero Trofeo R (Set of 4)&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Make - Pirelli&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Model - PZero Trofeo R&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Cost - INR 25,400&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="textFormat">
      <enum>Qt::RichText</enum>
@@ -85,31 +85,11 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="SignIN">
-    <property name="geometry">
-     <rect>
-      <x>890</x>
-      <y>220</y>
-      <width>201</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 10pt &quot;MS Shell Dlg 2&quot;;</string>
-    </property>
-    <property name="text">
-     <string>ADD</string>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../Downloads/back-undo-return-button-png-5.png</iconset>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>190</y>
+      <x>120</x>
+      <y>170</y>
       <width>171</width>
       <height>151</height>
      </rect>
@@ -119,67 +99,30 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
 font: 15pt &quot;ROG Fonts&quot;;</string>
     </property>
     <property name="text">
-     <string>PIC 1</string>
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>pirelli_pzeo.jpg</pixmap>
     </property>
     <property name="scaledContents">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>350</x>
       <y>370</y>
-      <width>531</width>
+      <width>341</width>
       <height>151</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(191, 191, 191);
-font: 15pt &quot;ROG Fonts&quot;;</string>
+     <string notr="true">color: rgb(225, 225, 225);
+font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;M ICHELIN CupSport 3 (Set of 4)&lt;br/&gt;&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Make - Michelin&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Model - CupSport 3&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Cost - INR &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-    <property name="scaledContents">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="SignIN_2">
-    <property name="geometry">
-     <rect>
-      <x>890</x>
-      <y>370</y>
-      <width>201</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 10pt &quot;MS Shell Dlg 2&quot;;</string>
-    </property>
-    <property name="text">
-     <string>ADD</string>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../Downloads/back-undo-return-button-png-5.png</iconset>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>340</y>
-      <width>281</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(191, 191, 191);
-font: 15pt &quot;ROG Fonts&quot;;</string>
-    </property>
-    <property name="text">
-     <string>PIC 1</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;MICHELIN CupSport 3 (Set of 4)&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Make - Michelin&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Model - CupSport 3&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Cost - INR 25,000&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="scaledContents">
      <bool>false</bool>
@@ -188,61 +131,181 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>550</y>
-      <width>541</width>
+      <x>350</x>
+      <y>560</y>
+      <width>361</width>
       <height>151</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(191, 191, 191);
-font: 15pt &quot;ROG Fonts&quot;;</string>
+     <string notr="true">color: rgb(225, 225, 225);
+font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;PIRELLI DIABLO CORSE (Set of 4)&lt;br/&gt;&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Make - Pirelli&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Model - Diablo Corse&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Cost - INR &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;PIRELLI DIABLO CORSE (Set of 4)&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Make - Pirelli&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Model - Diablo Corse&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Cost - INR 26,000&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="scaledContents">
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="SignIN_3">
+   <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>890</x>
-      <y>510</y>
-      <width>201</width>
-      <height>121</height>
+      <x>70</x>
+      <y>340</y>
+      <width>1061</width>
+      <height>20</height>
      </rect>
     </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>540</y>
+      <width>1051</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SignIN">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>180</y>
+      <width>231</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Oswald SemiBold</family>
+      <pointsize>22</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">font: 10pt &quot;MS Shell Dlg 2&quot;;</string>
+     <string notr="true">font: 22pt &quot;Oswald SemiBold&quot;;</string>
     </property>
     <property name="text">
      <string>ADD</string>
     </property>
     <property name="icon">
      <iconset>
-      <normaloff>../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../Downloads/back-undo-return-button-png-5.png</iconset>
+      <normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SignIN_2">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>380</y>
+      <width>231</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Oswald SemiBold</family>
+      <pointsize>22</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 22pt &quot;Oswald SemiBold&quot;;</string>
+    </property>
+    <property name="text">
+     <string>ADD</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SignIN_3">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>580</y>
+      <width>231</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Oswald SemiBold</family>
+      <pointsize>22</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 22pt &quot;Oswald SemiBold&quot;;</string>
+    </property>
+    <property name="text">
+     <string>ADD</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</iconset>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>370</y>
+      <width>171</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(225, 225, 225);
+background-color: rgb(255, 255, 255);
+font: 15pt &quot;ROG Fonts&quot;;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>michelin cup.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>490</y>
-      <width>281</width>
-      <height>121</height>
+      <x>120</x>
+      <y>570</y>
+      <width>171</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(191, 191, 191);
+     <string notr="true">color: rgb(225, 225, 225);
 font: 15pt &quot;ROG Fonts&quot;;</string>
     </property>
     <property name="text">
-     <string>PIC 1</string>
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>diablo.jpg</pixmap>
     </property>
     <property name="scaledContents">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -251,7 +314,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1207</width>
+     <width>1209</width>
      <height>26</height>
     </rect>
    </property>
